cluster/apps/media/jellyfin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: media
  annotations:
    hajimari.io/icon: simple-icons:jellyfin
    hajimari.io/enable: true
    hajimari.io/appName: "Jellyfin"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: jellyfin.${SECRET_LOCAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-svc
            port:
              number: 80
  tls:
  - hosts: 
    - jellyfin.${SECRET_LOCAL_DOMAIN}
    secretName: wildcard-certs-media
